--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,12 @@ body {
 	margin: 0;
 }
 
+
+
+
+/* Header  
+==============*/
+
 header {
 	display: flex;
 	justify-content: space-between;
@@ -36,8 +42,18 @@ button {
 	cursor: pointer;
 	box-shadow: 0 16px 36px rgb(52 213 68 / 22%);
 	padding: 15px;
+	transition: background-color 0.3 ease-in;
 }
 
+button:hover {
+	background-color: #f6980c;
+	box-shadow: 0 16px 36px rgba(246 152 12 / 20%);
+}
+
+
+
+/* About 
+============== */
 .about {
 	display: flex;
 	justify-content: space-around;
@@ -52,7 +68,7 @@ button {
 
 .about__info {
 	max-width: 550px;
-  }
+}
 
 .about h1 {
 	font-size: 18px;
@@ -69,7 +85,7 @@ button {
 
 .about__image {
 	width: 500px;
-  }
+}
    
 .about__sun-image {
 	width: 100px;
@@ -77,3 +93,115 @@ button {
 }
 
 
+
+
+/* Form 
+================ */
+
+.form__container {
+	width: 550px;
+}
+
+.form {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	background-color: #1D263A;
+	color: #fff;
+	padding: 115px 0;
+	text-align: center;
+}
+
+.form__group {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-evenly;
+	text-align: left;
+}
+
+.form h1 {
+	font-size: 48px;
+}
+
+.form p {
+	font-size: 18px;
+	opacity: 0.65;
+}
+
+/* форма внутри с секцией формы */
+.form form {
+	display: grid;
+	grid-gap: 20px;
+	margin-top: 60px;
+}
+
+/* текстовая метка */
+.form label {
+	font-size: 18px;
+	font-weight: 600;
+	padding-bottom: 15px;
+}
+
+/* поле  и селект */
+.form input, .form select {
+	font-size: 18px;
+	color: #213053;
+	height: 60px;
+	padding: 0 20px;
+	border-radius: 15px;
+	border: none;
+}
+/* стрелочка селекта */
+select {
+	appearance: none;
+}
+/* рамка поля */
+input {
+	outline: none;
+}
+
+
+/* кнопка */
+.form__submit {
+	font-size: 18px;
+	font-weight: 600;
+	margin-top: 40px;
+}
+
+
+
+/* Footer 
+============== */
+.footer {
+	padding: 90px 20px;
+}
+
+.footer__container {
+	display: flex;
+	justify-content: center;
+}
+
+.footer__copyright {
+	margin-top: 40px;
+	text-align: center;
+	opacity: 0.5;
+}
+
+.footer__group {
+	padding-right: 80px;
+}
+
+.footer__group h3 {
+	font-size: 16px;
+	opacity: 0.7;
+	margin-bottom: 30px;
+}
+
+.footer__links {
+	display: flex;
+	flex-direction: column
+}
+
+.footer__links a {
+	margin-bottom: 15px;
+}
