Мобильная версия сайта

--- a/css/style.css
+++ b/css/style.css
@@ -11,10 +11,14 @@ body {
 ==============*/
 
 header {
+	position: sticky;
+	top: 0;
+	background: #fff;
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
 	padding: 20px;
+	z-index: 1;
 }
 
 .header__logo {
@@ -66,13 +70,14 @@ button:hover {
     background-size: cover;
 }
 
+
 .about__info {
 	max-width: 550px;
 }
 
 .about h1 {
-	font-size: 18px;
-	line-height: 30px;
+	font-size: 60px;
+	line-height: 60px;
 	opacity: 0.8;
 }
 
@@ -88,8 +93,20 @@ button:hover {
 }
    
 .about__sun-image {
+	position: absolute;
 	width: 100px;
 	height: 100px;
+	animation: rotation 10s linear infinite;
+}
+
+@keyframes rotation {
+	0% {
+		transform: rotate(0);
+	  }
+
+	100% {
+		transform: rotate(360deg);
+	}
 }
 
 
@@ -204,4 +221,61 @@ input {
 
 .footer__links a {
 	margin-bottom: 15px;
+}
+
+
+@media (max-width: 1024px) {
+	
+}
+
+@media (max-width: 720px) {
+	
+}
+
+@media (max-width: 540px) {
+	
+}
+
+@media (max-width: 320px) {
+	header {
+		padding: 10px;
+	}
+	.header__logo {
+		width: 30%;
+	}
+	button {
+		border-radius: 10px;
+		padding: 10px;
+	}
+	.about {
+		display: flex;
+		flex-direction: column-reverse;
+		padding: 50px 0;
+	}
+	.about__image {
+		width: 300px;
+	}
+	.about h1 {
+		font-size: 36px;
+		line-height: 40px;
+		padding: 0 10px;
+	}
+	.about p {
+		padding: 0 10px;
+		line-height: 25px;
+		font-size: 18px;
+	}
+	.about__sun-image {
+		position: absolute;
+		width: 80px;
+		height: 80px;
+		animation: rotation 10s linear infinite;
+	}
+	.about button {
+		font-size: 18px;
+		border-radius: 20px;
+		padding: 20px 25px;
+		margin: 20px 0 0 10px;
+	}
+	
 }
