--- a/css/style.css
+++ b/css/style.css
@@ -115,12 +115,13 @@ button:hover {
 ================ */
 
 .features{
+
 	background-color: #fff;
 	padding: 115px 60px;
 	
 }
 
-.cards {
+.cards {	
 	display: grid;
 	grid-template-columns: 1fr 1fr 1fr;	
 }
@@ -172,14 +173,17 @@ button:hover {
 
 .features__feedback {
 	display: flex;
+	
 }
 
 .features__feedback-left {
 	margin-right: 10px;
+	width: 50%;
 }
 
 .features__feedback-left h2 {
 	font-size: 48px;
+	width: 50%;
 }
 
 .features__feedback-left p {
@@ -219,6 +223,69 @@ button:hover {
 .fa-star {
 	color: #ff7039;
 }
+
+
+/* Promo 
+================ */
+
+.promo {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-shrink: 0;
+}
+
+.promo__image {
+	width: 50%;
+	background-image: url("/img/promo.jpg") no-repeat;
+	background-position: center;
+    background-size: cover;
+}
+
+.promo__right {
+	width: 50%;
+	background-color: #dd5f26;
+	padding: 160px 60px;
+}
+
+.promo__card {
+	background: #fff;
+	padding: 30px 40px;
+	font-size: 20px;
+	line-height: 22px;
+	font-weight: 500;
+	border-radius: 25px;
+}
+
+.promo__card p {
+	opacity: 80%;
+	
+
+}
+
+.promo__card p::before {
+	content: "";
+	background: #ec6b29;
+	width: 10px;
+	height: 10px;
+	border-radius: 50%;
+	display: inline-block;
+	margin-right: 10px;
+}
+
+.promo__card button {
+	background: #107b1c;
+	margin-top: 20px;
+	font-size: 18px;
+	padding: 15px 30px;
+	font-weight: 600;
+}
+
+.fa-chevron-right {
+	font-size: 15px;
+	margin-left: 5px;
+}
+
 
 /* Form 
 ================ */
@@ -488,7 +555,28 @@ input {
 	}
 
 	.features__savings-box {
+		margin-right: 0px;
 		margin-bottom: 30px;
+	}
+
+	.promo {
+		display: flex;
+		flex-direction: column-reverse;
+		flex-shrink: 0;
+	}
+
+	.promo__image {
+		width: 100%;
+		height: 500px;
+	}
+
+	.promo__right {
+		width: 100%;
+		padding: 50px 10px;
+	}
+
+	.promo__card {
+		margin: 0px 10px;
 	}
 
 	.form {
