--- a/css/style.css
+++ b/css/style.css
@@ -123,12 +123,14 @@ button:hover {
 
 .cards {	
 	display: grid;
+	grid-gap: 50px;
 	grid-template-columns: 1fr 1fr 1fr;	
 }
 
 .card {
 	padding: 35px 40px 25px 40px;
-	margin: 0px 25px;
+	background: #fff;
+	/* margin: 0px 25px; */
 	border: 1px solid #D9E4E6;
 	border-radius: 5px;
 }
@@ -140,40 +142,43 @@ button:hover {
 	width: 100px;
 	height: 100px;
 
-	/* text-align: center; */
-	color: #ad1714;
 	border-radius: 50%;
 	font-size: 32px;
 	font-weight: 700;
 	background: #eaeff9;
-	
 }
-.fa-solar-panel {
+.card__logo.yellow {
 	color: #ffb406;
 }
 
-.fa-chart-line {
+.card__logo.red {
+	color: #ad1714;
+}
+
+.card__logo.green {
 	color: #22a030;
 }
 
 .card h3 {
 	font-size: 16px;
-	line-height: 22px;
-	opacity: 0.8;
+	/* line-height: 22px;
+	opacity: 0.8; */
 }
 
 .card p {
 	font-size: 16px;
+	line-height: 22px;
+	opacity: 0.8;
 }
 
 .features__border {
+	width: 100%;
 	margin: 50px 0px;
 	border-top: 1px solid #E6EAF4;
 }
 
 .features__feedback {
 	display: flex;
-	
 }
 
 .features__feedback-left {
@@ -183,7 +188,6 @@ button:hover {
 
 .features__feedback-left h2 {
 	font-size: 48px;
-	width: 50%;
 }
 
 .features__feedback-left p {
@@ -194,7 +198,7 @@ button:hover {
 
 .features__feedback-right {
 	display: flex;
-	justify-content: center;
+	align-items: center;
 }
 
 .features__box {
@@ -220,7 +224,7 @@ button:hover {
 	box-shadow: 0px 6px 0 rgb(29 38 58 / 20%);
 }
 
-.fa-star {
+.stars {
 	color: #ff7039;
 }
 
@@ -230,37 +234,32 @@ button:hover {
 
 .promo {
 	display: flex;
-	justify-content: center;
-	align-items: center;
-	flex-shrink: 0;
 }
 
 .promo__image {
 	width: 50%;
-	background-image: url("/img/promo.jpg") no-repeat;
+	background: url("../img/promo.jpg");
 	background-position: center;
     background-size: cover;
+	flex-shrink: 0;
 }
 
 .promo__right {
-	width: 50%;
-	background-color: #dd5f26;
+	background: #dd5f26;
 	padding: 160px 60px;
 }
 
-.promo__card {
+.promo__text {
 	background: #fff;
 	padding: 30px 40px;
 	font-size: 20px;
-	line-height: 22px;
+	line-height: 26px;
 	font-weight: 500;
 	border-radius: 25px;
 }
 
-.promo__card p {
+.promo__text p {
 	opacity: 80%;
-	
-
 }
 
 .promo__card p::before {
@@ -273,15 +272,21 @@ button:hover {
 	margin-right: 10px;
 }
 
-.promo__card button {
+.promo__text button {
 	background: #107b1c;
+	box-shadow: 0 16px 36px rgb(16 122 28 / 30%);
 	margin-top: 20px;
 	font-size: 18px;
 	padding: 15px 30px;
 	font-weight: 600;
 }
 
-.fa-chevron-right {
+.promo__button-wrap {
+	display: flex;
+	justify-content: center;
+}
+
+.promo__text button i {
 	font-size: 15px;
 	margin-left: 5px;
 }
@@ -513,25 +518,23 @@ input {
 	}
 
 	.cards {
-		display: grid;
-		grid-template-columns: auto;	
+		grid-template-columns: auto;
+		grid-gap: 0px;	
 	}
 
 	.card {
 		margin: 0px 0px 50px 0px;
 	}
 
-	.card:last-child{
-		margin: 25px 0px 0px 0px;
-	}
-
-	.features{
-		background-color: #fff;
+	.features {
 		padding: 50px 10px;
 	}
 
+	.features__border {
+		margin: 0px 0px 50px 0px;
+	}
+
 	.features__feedback {
-		display: flex;
 		flex-direction: column;
 	}
 
@@ -539,19 +542,13 @@ input {
 		margin-right: 0px;
 	}
 	
-	.features__feedback-left h2 {
-		font-size: 48px;
+	.features__feedback-left h2, .features__box h3{
+		font-size: 36px;
 	}
 
 	.features__feedback-right {
-		display: flex;
 		flex-direction: column;
-	}
-
-	.features__box h3 {
-		margin-top: 0px;
-		margin-bottom: 20px;
-		font-size: 36px;
+		align-items: initial;
 	}
 
 	.features__savings-box {
@@ -560,9 +557,7 @@ input {
 	}
 
 	.promo {
-		display: flex;
 		flex-direction: column-reverse;
-		flex-shrink: 0;
 	}
 
 	.promo__image {
@@ -571,7 +566,6 @@ input {
 	}
 
 	.promo__right {
-		width: 100%;
 		padding: 50px 10px;
 	}
 
